--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,8 +3,10 @@ WORKDIR '/app'
 
 COPY package.json .
 
-
-RUN npm config set proxy http://localhost:3128 install
+ENV http_proxy http://172.17.0.1:3128 
+ENV https_proxy http://172.17.0.1:3128 
+#RUN npm install
+RUN npm config set proxy http://172.17.0.1:3128 install
 COPY . .
 
 CMD ["npm", "run", "start"]
